Upgrading Flask and supporting modules

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,35 @@
-attrs==17.4.0
-bcrypt==2.0.0
-certifi==2018.1.18
-cffi==1.5.2
+atomicwrites==1.1.5
+attrs==18.1.0
+bcrypt==3.1.4
+certifi==2018.4.16
+cffi==1.11.5
 chardet==3.0.4
 click==6.7
-Flask==0.12.2
-Flask-HTTPAuth==3.1.1
-Flask-Limiter==0.9.3
-Flask-Login==0.3.2
+Flask==1.0.2
+Flask-Caching==1.4.0
+Flask-HTTPAuth==3.2.4
+Flask-Limiter==1.0.1
+Flask-Login==0.4.1
 funcsigs==1.0.2
 functools32==3.2.3.post2
-idna==2.6
+html5lib==1.0.1
+idna==2.7
 itsdangerous==0.24
 Jinja2==2.10
 jsonschema==2.6.0
-limits==1.1.1
+limits==1.3
 MarkupSafe==1.0
-mechanize==0.2.5
+mechanize==0.3.6
+more-itertools==4.2.0
+packaging==17.1
+pip-review==1.0
 pluggy==0.6.0
-py==1.5.2
-pycparser==2.14
-pytest==3.4.2
-requests==2.18.4
-six==1.10.0
-urllib3==1.22
+py==1.5.3
+pycparser==2.18
+pyparsing==2.2.0
+pytest==3.6.2
+requests==2.19.1
+six==1.11.0
+urllib3==1.23
+webencodings==0.5.1
 Werkzeug==0.14.1
