--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,38 @@
-atomicwrites==1.1.5
-attrs==18.1.0
-bcrypt==3.1.4
-certifi==2018.4.16
-cffi==1.11.5
+atomicwrites==1.3.0
+attrs==19.1.0
+bcrypt==3.1.7
+certifi==2019.9.11
+cffi==1.12.3
 chardet==3.0.4
-click==6.7
-Flask==1.0.2
-Flask-Caching==1.4.0
-Flask-HTTPAuth==3.2.4
+Click==7.0
+filelock==3.0.12
+Flask==1.1.1
+Flask-HTTPAuth==3.3.0
 Flask-Limiter==1.0.1
 Flask-Login==0.4.1
-funcsigs==1.0.2
-functools32==3.2.3.post2
 html5lib==1.0.1
-idna==2.7
-itsdangerous==0.24
-Jinja2==2.10
-jsonschema==2.6.0
+idna==2.8
+importlib-metadata==0.23
+itsdangerous==1.1.0
+Jinja2==2.10.1
+jsonschema==3.0.2
 limits==1.3
-MarkupSafe==1.0
-mechanize==0.3.6
-more-itertools==4.2.0
-packaging==17.1
-pip-review==1.0
-pluggy==0.6.0
-py==1.5.3
-pycparser==2.18
-pyparsing==2.2.0
-pytest==3.6.2
-requests==2.19.1
-six==1.11.0
-urllib3==1.23
+MarkupSafe==1.1.1
+mechanize==0.4.3
+more-itertools==7.2.0
+packaging==19.2
+pluggy==0.13.0
+py==1.8.0
+pycparser==2.19
+pyparsing==2.4.2
+pyrsistent==0.15.4
+requests==2.22.0
+six==1.12.0
+toml==0.10.0
+tox==3.14.0
+urllib3==1.25.6
+virtualenv==16.7.5
+wcwidth==0.1.7
 webencodings==0.5.1
-Werkzeug==0.14.1
+Werkzeug==0.16.0
+zipp==0.6.0
