--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,26 @@
-atomicwrites==1.3.0
-attrs==19.1.0
-bcrypt==3.1.7
-certifi==2019.9.11
-cffi==1.12.3
-chardet==3.0.4
-Click==7.0
+appdirs==1.4.4
+attrs==20.3.0
+bcrypt==3.2.0
+cffi==1.14.3
+click==7.1.2
+distlib==0.3.1
 filelock==3.0.12
-Flask==1.1.1
-Flask-HTTPAuth==3.3.0
-Flask-Limiter==1.0.1
-Flask-Login==0.4.1
-html5lib==1.0.1
-idna==2.8
-importlib-metadata==0.23
+Flask==1.1.2
+Flask-HTTPAuth==4.2.0
+Flask-Limiter==1.4
+Flask-Login==0.5.0
 itsdangerous==1.1.0
-Jinja2==2.10.1
-jsonschema==3.0.2
-limits==1.3
+Jinja2==2.11.2
+jsonschema==3.2.0
+limits==1.5.1
 MarkupSafe==1.1.1
-mechanize==0.4.3
-more-itertools==7.2.0
-packaging==19.2
-pluggy==0.13.0
-py==1.8.0
-pycparser==2.19
-pyparsing==2.4.2
-pyrsistent==0.15.4
-requests==2.22.0
-six==1.12.0
-toml==0.10.0
-tox==3.14.0
-urllib3==1.25.6
-virtualenv==16.7.5
-wcwidth==0.1.7
-webencodings==0.5.1
-Werkzeug==0.16.0
-zipp==0.6.0
+packaging==20.8
+pluggy==0.13.1
+py==1.10.0
+pycparser==2.20
+pyparsing==2.4.7
+pyrsistent==0.17.3
+six==1.15.0
+toml==0.10.2
+virtualenv==20.4.0
+Werkzeug==1.0.1
