Adding cov coverage report to tox

--- a/tox.ini
+++ b/tox.ini
@@ -8,9 +8,11 @@ deps =
   pytest
   pytest-flask
   freezegun
-
+  pytest-cov
+setenv =
+  PYTHONPATH = {toxinidir}
 commands =
-  pytest -v {posargs}
+  pytest --cov-report html --cov=scoreboard -v {posargs}
 
 [flake8]
 max-line-length = 160
